Adding CSS changes

--- a/src/main/webapp/views/searchProfile.html
+++ b/src/main/webapp/views/searchProfile.html
@@ -43,7 +43,7 @@
        			 </a>
 				</td> -->
 				<td>
-				<a id="rsBtn" ui-sref="createProfile" class="btn btn-primary">
+				<a id="rsBtn1" ui-sref="createProfile" class="btn btn-primary">
          		 <span class="glyphicon glyphicon-plus" style="position:aboslute;top:1px;"></span> Create
        			 </a>
 				</td>
