--- a/src/main/webapp/views/viewPosition.html
+++ b/src/main/webapp/views/viewPosition.html
@@ -1,136 +1,206 @@
-<html lang="en" ng-app="erApp" ng-controller="editPositionCtrl">
-<h1>
-	<b>Position Management - Edit jobcode: <span ng-bind="position.jobcode"></span></b>
-</h1>
-<br>
+<!-- 
+
+<link
+<link rel="stylesheet" type="text/css" media="screen"
+	href="http://tarruda.github.com/bootstrap-datetimepicker/assets/css/bootstrap-datetimepicker.min.css">
+
+
+</script>
+<script type="text/javascript"
+	src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js">
+	
+
+<!-- ----------------------------------alert Message--------------------------------------------------------- -->
+            <div class="bs-example">
+               <div style="width:990px;display:none" class="alert alert-success" id="success-alert">
+	               <a href="" class="close" data-dismiss="alert">&times;</a>
+	               <strong>Success!</strong> Profile Details Stored Successfully!
+               </div>
+               <div style="width:990px;display:none" class="alert alert-danger" id="fail-alert">
+	               <a href="" class="close" data-dismiss="alert">&times;</a>
+	               <strong>Failed!</strong> Try again.
+               </div>
+             </div>  
+<!-- ----------------------------------alert Message--------------------------------------------------------- -->
+
+<!-- <form id="integerForm" role="form" class="form-horizontal" action="#" name="CreateCandidate" onvalidate> -->
+<div ng-controller="editProfileCtrl" align="left">
+ 
+  <accordion close-others=false>
+    
+    <accordion-group is-open="status.isFirstOpen" >
+        <accordion-heading>
+          Personal Details<i class="pull-right glyphicon" ng-class="{'glyphicon-minus': status.isFirstOpen, 'glyphicon-plus': !status.isFirstOpen}"></i>
+        </accordion-heading>
         
-       <div class="widget widget-table action-table">
-            <div class="form-container"><br>
-
-              	<!-- <form id="integerForm" role="form" class="form-horizontal" action="#" name="createPosition" onvalidate>
-              	  -->
-              	<!-- <table border="0" cellpadding="4"> -->
-              	<table>
-              	<tr>
-              	<td class="tableTd">
-              		<div class="control-group" ng-class="{'has-error' :createPosition.designation.$invalid && !createPosition.designation.$pristine}">
-						<label class="lbl" for="name">Designation*:</label>
-					</div>	
-				</td>
-				<td><div><a href="#" editable-select="position.designation" e-ng-options="o as o for o in options">
-                                               {{ position.designation }}
-                                             </a></div></td>
-										
+        <div class="row">
+        	<div align="right" class="control-group" ng-class="{ 'has-error' : CreateCandidate.candidateName.$invalid && !CreateCandidate.candidateName.$pristine }">
+				<div class="col-md-1"></div>
+				<div class="col-md-2">			
+					<label class="lbl" for="qualification"><i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Designation*:</label>
+				</div>
+				<div class="col-md-3">
+				<a href="#" editable-select="position.designation" e-ng-options="o as o for o in options">
+        					{{ position.designation}}
+      			</a>
 				
-				<td class="tableTd">
-					<div class="control-group" ng-class="{'has-error' :createPosition.location.$invalid && !createPosition.location.$pristine}">
-								<label class="lbl" for="name">Location :</label>
-					</div>			
-				</td>
-				<td><div><a href="#" editable-select="position.location" e-ng-options="o as o for o in locations">
-                                               {{position.location}}
-                                             </a></div></td>
-										
-				</tr>
+				</div>    
+			</div>	
 				
-				
-				<tr>
-				<td id="tdid" class="tableTd">
-					<div class="control-group"
-						ng-class="{'has-error' :createPosition.experienceRequired.$invalid && !createPosition.experienceRequired.$pristine}">
-						<label class="lbl" for="experienceRequired">Experience Required*:</label>
-					</div>				
-				</td>	
-				<td><div><a href="#" editable-select="position.experienceRequired" e-ng-options="o as o for o in items">
-                                               {{position.experienceRequired}}
-                                             </a></div></td>
-										
-				</td>		
-				<td  class="tableTd">
-					<div class="control-group" ng-class="{'has-error' :createPosition.client.$invalid && !createPosition.client.$pristine}">
-						<label class="lbl" for="name">Client :</label>
+				<div class="control-group" ng-class="{ 'has-error' : CreateCandidate.emailId.$invalid && !CreateCandidate.emailId.$pristine }">
+					<div class="col-md-2" align="right">
+					 	<label class="lbl" for="emailId"><i class="glyphicon glyphicon-map-marker"></i>&nbsp;&nbsp;Location*:</label>
 					</div>
-				</td>
-				<td><div><a href="#" editable-select="position.client" e-ng-options="o as o for o in clients">
-                                               {{ position.client  }}
-                                             </a></div></td>
-										
+					<div class="col-md-3">
+				<a href="#" editable-select="position.location" e-ng-options="o as o for o in locations">
+        					{{ position.location}}
+      			</a>
 				
-				</tr>
-				 <tr>
-					<td id="tdid" class="tableTd">
-						<div class="control-group" >
-							<label class="lbl" for="primarySkills">Primary Skills*:</label>
-						</div>	
-					</td> 
-					<td class="tableTd">
-							  <div>
-							  <a href="#" .editable-hide="position.primarySkills">{{position.primarySkills || "empty" }}</a>
-							</div> 
-									 	
-						</td>
-					
-					<td id="tdid" class="tableTd">
-						<div class="ui-widget control-group" ng-form="subForm"
-							ng-class="{ 'has-error' : createPosition.secondarySkills.$invalid && !createPosition.secondarySkills.$pristine }">
-							<label class="lbl" for="secondarySkills">Secondary Skills :</label>
-						</div>
+				</div> 					
+				</div>
+        </div>
+        
+            <div class="row">
+        	<div align="right" class="control-group" ng-class="{ 'has-error' : CreateCandidate.candidateName.$invalid && !CreateCandidate.candidateName.$pristine }">
+				<div class="col-md-1"></div>
+				<div class="col-md-2"></div>
+				<div class="col-md-3" style="display: inline;">
+					<span ng-show="CreateCandidate.candidateName.$invalid  && !CreateCandidate.candidateName.$pristine"
+								class="help-block">Enter A Valid Name!</span>
+				   
+				</div>   
+			</div>	
+				
+				<div class="control-group" ng-class="{ 'has-error' : CreateCandidate.emailId.$invalid && !CreateCandidate.emailId.$pristine }">
+					<div class="col-md-2" align="right"></div>
+					<div class="col-md-3">	
+						<span ng-show="CreateCandidate.emailId.$dirty && CreateCandidate.emailId.$invalid">
+							<span class="help-block" class="error" ng-show="CreateCandidate.emailId.$error.email">
+									Valid Email-id is required</span>		
+						</span>			
+					</div>					
+				</div>
+        </div>
+    
+        <br>
+		<div class="row">
+        	<div align="right" class="control-group" ng-class="{'has-error' :CreateCandidate.mobileNo.$invalid && !CreateCandidate.mobileNo.$pristine}">
+					<div class="col-md-1"></div>
+					<div class="col-md-2" align="right">
+					 	<label class="lbl" for="emailId"><i class="glyphicon glyphicon-time"></i>&nbsp;&nbsp;Experiance*:</label>
+					</div>
+					<div class="col-md-3">
+				<a href="#" editable-select="position.experienceRequired" e-ng-options="o as o for o in exp">
+        					{{ position.experienceRequired}}
+      			</a>
+				
+				</div> 		
+			</div>   
+				
+			<div class="control-group" ng-class="{'has-error' :CreateCandidate.altmobileNo.$invalid && !CreateCandidate.altmobileNo.$pristine}">
+				<div class="col-md-2" align="right">
+				 	<label class="lbl" for="altmobileNo"><i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Client:</label>
+				</div>
+				<div class="col-md-3">
+						<a href="#" editable-select="position.client"
+							e-ng-options="o as o for o in clients"> {{ position.client }}
+						</a>
+					</div>			
+			</div>
+        </div>
+               <div class="row">
+        	<div align="right" class="control-group" ng-class="{ 'has-error' : CreateCandidate.candidateName.$invalid && !CreateCandidate.candidateName.$pristine }">
+				<div class="col-md-1"></div>
+				<div class="col-md-2"></div>
+				<div class="col-md-3" style="display: inline;">
+					<span class="help-block" ng-show="CreateCandidate.mobileNo.$error.required && !CreateCandidate.mobileNo.$pristine && !CreateCandidate.mobileNo.$error.number">
+						Mobile Number is required.</span>
+					<span class="help-block" ng-show="CreateCandidate.mobileNo.$error.number">Invalid
+								mobileNo!!</span> 
+					<span class="help-block" ng-show="CreateCandidate.mobileNo.$error.maxlength">Mobile
+								Number is too long</span>
+				   
+				</div>   
+			</div>	
+				
+				<div class="control-group" ng-class="{ 'has-error' : CreateCandidate.emailId.$invalid && !CreateCandidate.emailId.$pristine }">
+					<div class="col-md-2" align="right"></div>
+					<div class="col-md-3">	
+						<span class="help-block" ng-show="CreateCandidate.altmobileNo.$error.required && !CreateCandidate.altmobileNo.$pristine && !CreateCandidate.altmobileNo.$error.number">
+						Mobile Number is required.</span>
+					<span class="help-block" ng-show="CreateCandidate.altmobileNo.$error.number">Invalid
+								mobileNo!!</span> 
+					<span class="help-block" ng-show="CreateCandidate.altmobileNo.$error.maxlength">Mobile
+								Number is too long</span>			
+					</div>					
+				</div>
+        </div>
+        
+    
+        <br>
+		<div class="row">
+        	<div align="right" class="control-group" ng-class="{ 'has-error' : CreateCandidate.passportNo.$invalid && !CreateCandidate.passportNo.$pristine }">
+					<div class="col-md-1"></div>
+					<div class="col-md-2">			
+						<label class="lbl" for="passportNo"><i class="glyphicon glyphicon-book"></i>&nbsp;&nbsp;primary Skills.:</label>
+					</div>
+					<div class="col-md-3">
+						<a href="#" .editable-hide="position.primarySkills">{{position.primarySkills
+							|| "empty" }}</a>
+					</div>
+			</div>   
+				
+			<div class="control-group">
+				<div class="col-md-2" align="right">
+				 	<label class="lbl" for="notes"><i class="glyphicon glyphicon-book"></i>&nbsp;&nbsp;secondarySkills:</label>
+				</div>
+				<div>
+						<a href="#" editable-text="position.secondarySkills">{{position.secondarySkills
+							|| "empty" }}</a>
+					</div>				
+			</div>
+        </div>
+        <div class="row">
+        	<div align="right" class="control-group" ng-class="{ 'has-error' : CreateCandidate.passportNo.$invalid && !CreateCandidate.passportNo.$pristine }">
+					<div class="col-md-1"></div>
+					<div class="col-md-2">			
+						<label class="lbl" for="passportNo"><i class="glyphicon glyphicon-plane"></i>&nbsp;&nbsp;Job Description.:</label>
+					</div>
+					<div class="col-md-3">
 						
-					</td>
-					<td class="tableTd">
-							<div>
-							  <a href="#" editable-text="position.secondarySkills">{{position.secondarySkills || "empty" }}</a>
-							</div>
-						</td>
-						 <td id="tdid" class="tableTd">
-				<div class="control-group" ng-class="{'has-error' :createPosition.noOfPositions.$invalid && !createPosition.noOfPositions.$pristine}">
-								<label class="lbl" for="name">Interview Rounds</label>
-								</div>
-								</td>
-								<td><div><a href="#" editable-select="position.InterviewRounds" e-ng-options="o as o for o in rounds">
-                                               {{position.InterviewRounds  }}
-                                             </a></div></td>
-								
-								</tr>
-							
-				<tr>					
-					<td id="tdid" class="tableTd">
-						<div class="control-group" ng-class="{'has-error' :createPosition.jobProfile.$invalid && !createPosition.jobProfile.$pristine}">
-								<label class="lbl" for="name">Job Description*:</label>
-						</div>		
-					</td>
-					<td class="tableTd">
-							<div>
-							  <a href="#" editable-text="position.jobProfile">{{position.jobProfile || "empty" }}</a>
-							</div>
-						</td>
-					
-					
-					</tr>
+						<a href="#" editable-text="position.jobProfile">{{position.jobProfile
+							|| "empty" }}</a>
+					</div>
+			</div>   
 				
-				<tr>				
-	              	<td></td>
-	              	<td id="tdid" class="tableTd">
-	              		<div class="control-group">
-	              			<a href="" class="btn btn-primary" ng-click="updatePositionDetails()">
-	         		 			<span class="glyphicon glyphicon-ok"></span> save
-	       			 		</a>
-	       			 		<!-- <a ui-sref="searchPosition" class="btn btn-success" ng-click="updatePositionDetails()">
-	         		 			<span class="glyphicon glyphicon-ok"></span> Update
-	       			 		</a> -->
-							<a ui-sref="searchPosition" class="btn btn-success">
-	         		 			<span class="glyphicon glyphicon-remove"></span> Cancel
-	       			 		</a>
-						</div>
-					</td>
-					<td></td>
-					<td></td>
-				</tr>
-              	</table>
-              
-            	<!-- </form> -->
-
-            </div>
-
-          </div>
-          </html>
+			<div class="control-group">
+				<div class="col-md-2" align="right">
+				 	<label class="lbl" for="notes"><i class="glyphicon glyphicon-home"></i>&nbsp;&nbsp;InterviewRounds:</label>
+				</div>
+				<div class="col-md-3">
+						<!-- <a href="#" editable-select="  ir.interviewRounds"
+							e-ng-options="o as o for o in irounds"> {{ ir.interviewRounds }}
+						</a> -->
+						<ui-select multiple ng-model="position.interviewRounds" theme="select2" ng-disabled="disabled" style="width: 250px;">
+    <ui-select-match placeholder="Select Rounds..">{{$item}}</ui-select-match>
+    <ui-select-choices repeat="color in irounds | filter:$select.search">
+      {{color}}
+    </ui-select-choices>
+					</div>			
+			</div>
+        </div>
+    </accordion-group>
+   
+   </accordion>
+  <div align="center">
+<a href="" class="btn btn-primary"
+							ng-click="updatePositionDetails()"> <span
+							class="glyphicon glyphicon-ok"></span> Update
+						</a>&nbsp;&nbsp;&nbsp;&nbsp;
+	<a ui-sref="searchPosition" class="btn btn-primary">
+         <span class="glyphicon glyphicon-remove"></span> Cancel
+    </a></div>
+ <br><br><br> 
+</div>	
+</form> 
+    
