--- a/src/main/webapp/views/interviewManagement.html
+++ b/src/main/webapp/views/interviewManagement.html
@@ -39,7 +39,7 @@
                            
            <!--  </div>
             <input type="text" name="jobcode" ng-hide="true"
-									class="form-control input-sm" id="jobcode" ng-disabled="jbDisabled" ng-change="changeEvent()" 
+									class=" input-sm" id="jobcode" ng-disabled="jbDisabled" ng-change="changeEvent()" 
 									ng-model="position.jobcode" placeholder="Enter Job Code" required>
             <div class="createposition-container"><br> -->
          
@@ -47,8 +47,40 @@
            <form action="#" name="interviewManagement" onvalidate>
               	<form id="integerForm" role="form" class="form-horizontal">
               	<table>
-              	
-              	</table>
+              	<tr>
+              	<td id="tdid" class="tableTd">
+              	<div class="control-group" >
+						<label class="lbl" for="Location">Select Location:</label>
+							</td>
+							<td id="tdid">
+							</div>
+							<ui-select ng-model="interview.location" ng-change ="loadPositions()" class = "ui-select-class" theme="bootstrap" ng-disabled="disabled" reset-search-input="false">
+    <ui-select-match placeholder="Select Location" >{{interview.location}}</ui-select-match>
+    <ui-select-choices repeat="location in locations" refresh="refreshAddresses($select.search)" refresh-delay="0">
+    {{location}}
+    </ui-select-choices>
+  </ui-select>
+ </td>
+							<td id="tdid" class="tableTd">
+							<div class="control-group">
+							<label class="lbl" for="Position"> Select Position:</label>
+								</td>
+								<td id="tdid" class="tableTd">
+								</div>
+								<ui-select ng-model="interview.position" theme="bootstrap" ng-change = "disableSearch()" ng-disabled="positionDisable" reset-search-input="false" style="width: 380px;">
+    <ui-select-match placeholder="Select Position" >{{interview.position}}</ui-select-match>
+    <ui-select-choices repeat="position in positions" refresh="refreshAddresses($select.search)" refresh-delay="0">
+    {{position}}
+    </ui-select-choices>
+  </ui-select>
+			</td>
+			<td>
+				<a href="" id="interviewSearchBtn" ng-disabled="searchDisable" class="btn btn-primary" ng-click="searchPosition()">
+         		 <span class="glyphicon glyphicon-search" style="position:aboslute;top:1px;"></span> Search
+       			 </a>
+				</td>
+              	</tr>
+              	</table><br>
               	<div class="gridStyle" ng-grid="gridOptions"></div>
             	</form>
             </form>
