--- a/src/main/webapp/views/showInterview.html
+++ b/src/main/webapp/views/showInterview.html
@@ -14,7 +14,7 @@
 					<label class="lbl" for="candidateName"><i class="glyphicon glyphicon-user"></i>&nbsp;&nbsp;Interviewer Name: </label>
 				</div>
 				<div class="col-md-3" style="display: inline;">
-					<p>{{interviewLoad.interviewerName}}</p>
+					<a href="#" editable-text="interviewLoad.interviewerName" onbeforesave="validateName($data)">{{ interviewLoad.interviewerName || "empty" }}</a>
 				   
 				</div>   
 			</div>	
@@ -37,7 +37,7 @@
 						<label class="lbl" for="mobileNo"><i class="glyphicon glyphicon-phone"></i>&nbsp;&nbsp;Interviewer Mob. No.: 	</label>
 					</div>
 					<div class="col-md-3">
-						<p>{{interviewLoad.interviewerMobileNumber}}</p>
+						<a href="#" editable-text="interviewLoad.interviewerMobileNumber" onbeforesave="validateName($data)">{{ interviewLoad.interviewerMobileNumber || "empty" }}</a>
 					</div>
 			</div>   
 				
@@ -46,7 +46,7 @@
 				 	<label class="lbl" for="skypeId"><i class="glyphicon glyphicon-phone-alt"></i>&nbsp;&nbsp;Skype ID:</label>
 				</div>
 				<div class="col-md-3">	
-					<p>{{interviewLoad.skypeId}}</p>		
+					<a href="#" editable-text="interviewLoad.skypeId" onbeforesave="validateName($data)">{{ interviewLoad.skypeId || "empty" }}</a>	
 				</div>					
 			</div>
         </div>
@@ -59,7 +59,7 @@
 						<label class="lbl" for="location"><i class="glyphicon glyphicon-plane"></i>&nbsp;&nbsp;Location</label>
 					</div>
 					<div class="col-md-3">
-						<p>{{interviewLoad.interviewLocation}}</p>
+						<a href="#" editable-text="interviewLoad.interviewLocation" onbeforesave="validateName($data)">{{ interviewLoad.interviewLocation || "empty" }}</a>
 					</div>
 			</div>   
 				
@@ -68,7 +68,9 @@
 				<label class="lbl" for="emailId"><i class="glyphicon glyphicon-envelope"></i>&nbsp;&nbsp;Type Of Interview: </label>
 				</div>
 				<div class="col-md-3">	
-						<p>{{interviewLoad.typeOfInterview}}</p>
+						<a href="#" editable-select="interviewLoad.typeOfInterview" e-ng-options="o as o for o in typeOfInterviews">
+        					{{ interviewLoad.typeOfInterview }}
+      			</a>
 				</div>					
 			</div>
         </div>
@@ -82,7 +84,7 @@
 						<label class="lbl">Interviewer Email Id: </label>
 					</div>
 					<div class="col-md-3">
-						<p>{{interviewLoad.emailIdInterviewer}}</p>
+						<a href="#" editable-text="interviewLoad.emailIdInterviewer" onbeforesave="validateName($data)">{{ interviewLoad.emailIdInterviewer || "empty" }}</a>
 					</div>
 			</div>   
 				
@@ -91,7 +93,7 @@
 				 	<label class="lbl">Additional Notes: </label>
 				</div>
 				<div class="col-md-3">	
-						<p>{{interviewLoad.additionalNotes}}</p>	
+						<a href="#" editable-text="interviewLoad.additionalNotes" onbeforesave="validateName($data)">{{ interviewLoad.additionalNotes || "empty" }}</a>
 				</div>					
 			</div>
         </div>
@@ -105,7 +107,7 @@
 						<label class="lbl">Candidate Email Id: </label>
 					</div>
 					<div class="col-md-3">
-						<p>{{interviewLoad.candidateId}}</p>
+						<a href="#" editable-text="interviewLoad.candidateId" onbeforesave="validateName($data)">{{ interviewLoad.candidateId || "empty" }}</a>
 					</div>
 			</div>   
 				
